adding loggin endpoint to restapiclient
